improved answers for Last.FM notebook

--- a/Last FM API (Music).ipynb
+++ b/Last FM API (Music).ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "   'role': 'request',\n",
        "   'searchTerms': 'lil',\n",
        "   'startPage': '1'},\n",
-       "  'opensearch:totalResults': '534661',\n",
+       "  'opensearch:totalResults': '534751',\n",
        "  'opensearch:startIndex': '0',\n",
        "  'opensearch:itemsPerPage': '50',\n",
        "  'artistmatches': {'artist': [{'name': 'LIL UZI VERT',\n",
@@ -636,10 +636,10 @@
        "       'size': 'extralarge'},\n",
        "      {'#text': 'https://lastfm.freetls.fastly.net/i/u/300x300/2a96cbd8b46e442fc41c2b86b821562f.png',\n",
        "       'size': 'mega'}]},\n",
-       "    {'name': 'Lil Gotit',\n",
-       "     'listeners': '47162',\n",
+       "    {'name': 'Lily James',\n",
+       "     'listeners': '85328',\n",
        "     'mbid': '',\n",
-       "     'url': 'https://www.last.fm/music/Lil+Gotit',\n",
+       "     'url': 'https://www.last.fm/music/Lily+James',\n",
        "     'streamable': '0',\n",
        "     'image': [{'#text': 'https://lastfm.freetls.fastly.net/i/u/34s/2a96cbd8b46e442fc41c2b86b821562f.png',\n",
        "       'size': 'small'},\n",
@@ -651,10 +651,10 @@
        "       'size': 'extralarge'},\n",
        "      {'#text': 'https://lastfm.freetls.fastly.net/i/u/300x300/2a96cbd8b46e442fc41c2b86b821562f.png',\n",
        "       'size': 'mega'}]},\n",
-       "    {'name': 'Lily James',\n",
-       "     'listeners': '85328',\n",
+       "    {'name': 'Lil Gotit',\n",
+       "     'listeners': '47162',\n",
        "     'mbid': '',\n",
-       "     'url': 'https://www.last.fm/music/Lily+James',\n",
+       "     'url': 'https://www.last.fm/music/Lil+Gotit',\n",
        "     'streamable': '0',\n",
        "     'image': [{'#text': 'https://lastfm.freetls.fastly.net/i/u/34s/2a96cbd8b46e442fc41c2b86b821562f.png',\n",
        "       'size': 'small'},\n",
@@ -864,13 +864,13 @@
        "  '@attr': {'for': 'lil'}}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "endpoint = \"http://ws.audioscrobbler.com//2.0/?method=artist.search&artist=lil&api_key=[YOUR_API_HERE]&format=json&limit=50\"\n",
+    "endpoint = \"http://ws.audioscrobbler.com//2.0/?method=artist.search&artist=lil&api_key=\"+api_key+\"&format=json&limit=50\"\n",
     "\n",
     "lil_artists = requests.get(endpoint).json()\n",
     "\n",
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
        "dict_keys(['opensearch:Query', 'opensearch:totalResults', 'opensearch:startIndex', 'opensearch:itemsPerPage', 'artistmatches', '@attr'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "   'size': 'mega'}]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "str"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
        "   'size': 'mega'}]}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "'https://lastfm.freetls.fastly.net/i/u/300x300/2a96cbd8b46e442fc41c2b86b821562f.png'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1275,10 +1275,10 @@
       "LIL GNAR\n",
       "https://lastfm.freetls.fastly.net/i/u/300x300/2a96cbd8b46e442fc41c2b86b821562f.png\n",
       "-----\n",
-      "Lil Gotit\n",
+      "Lily James\n",
       "https://lastfm.freetls.fastly.net/i/u/300x300/2a96cbd8b46e442fc41c2b86b821562f.png\n",
       "-----\n",
-      "Lily James\n",
+      "Lil Gotit\n",
       "https://lastfm.freetls.fastly.net/i/u/300x300/2a96cbd8b46e442fc41c2b86b821562f.png\n",
       "-----\n",
       "Lil Wyte\n",
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1420,9 +1420,9 @@
       "MBID: \n",
       "Name: LIL GNAR\n",
       "MBID: \n",
-      "Name: Lil Gotit\n",
-      "MBID: \n",
       "Name: Lily James\n",
+      "MBID: \n",
+      "Name: Lil Gotit\n",
       "MBID: \n",
       "Name: Lil Wyte\n",
       "MBID: 9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8\n",
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1509,7 @@
     }
    ],
    "source": [
-    "endpoint = \"http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2\"\n",
+    "endpoint = \"http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=\"+api_key+\"&format=json&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2\"\n",
     "\n",
     "lil_jon = requests.get(endpoint).json()\n",
     "\n",
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
        " '9acaf734-b380-4c48-954c-a2cf1d7990a9']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1739,43 +1739,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=6e0c7c0e-cba5-4c2c-a652-38f71ef5785d\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=ac9a487a-d9d2-4f27-bb23-0f4686488345\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=c9cd225b-4883-428e-82c2-73e0b6282fb6\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=5f1adfe1-4d07-4141-b181-79e5d379d539\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=1550f952-c91b-40d7-9b4d-d26a259ee932\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=3268f062-6e76-480a-a384-e1dd2a276afb\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=bc1b5c95-e6d6-46b5-957a-5e8908b02c1e\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=1b72331b-3a97-4981-a81c-eeee9c275d28\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=a95384b1-6aec-468c-ae0d-8c6daf87c4c2\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=243c6f61-d83b-4459-bebd-5899df0da111\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=ad29ae1c-2eda-4071-9dc8-31910e7e546c\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=8ba17cf6-bec2-4ae4-9820-b1cda47adc08\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=1967c6ce-95a4-48f0-8ac7-abe637524aee\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=3ad4f6ec-253f-4050-8849-ca26266edfb8\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=9b5ce0c1-1bc0-4ea2-a8d3-f5ee7af9eda8\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=981d39fc-bd00-4cc6-ac67-6410f8b89098\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=bc21df5c-3d79-479b-b638-8ddb5ecea403\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=a31becdf-7b33-4409-9eb1-3f74bd72997c\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=b89f4c50-72f5-48ce-b08c-a643b191b24f\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=50ad1cde-1536-4268-a55f-e47a7b8280ab\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=9803d120-716d-45ba-9eb7-9a120813f908\n",
-      "http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=9acaf734-b380-4c48-954c-a2cf1d7990a9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "base_url = \"http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=\"\n",
+    "base_url = \"http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=\"+api_key+\"&format=json&mbid=\"\n",
     "\n",
-    "for mbid in mbids:\n",
-    "    print(base_url + mbid)"
+    "#for mbid in mbids:\n",
+    "#    print(base_url + mbid)\n",
+    "\n",
+    "#Commenting this out so I don't print out my key on a public page "
    ]
   },
   {
@@ -1807,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1789,7 @@
        "[4, 5, 6, 7]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1817,7 @@
        "[4, 5]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1861,7 @@
     }
    ],
    "source": [
-    "base_url = \"http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=[YOUR_API_HERE]&format=json&mbid=\"\n",
+    "base_url = \"http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&api_key=\"+api_key+\"&format=json&mbid=\"\n",
     "\n",
     "for mbid in mbids[:3]:\n",
     "    endpoint = base_url + mbid\n",
@@ -1909,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1990,8 +1963,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This is the way I originally solved questions 12 and 13"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +1987,7 @@
        " 'Lil Jon & The East Side Boyz']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2133,7 @@
        "11"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2203,12 +2183,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### This is an alternate way I solved the problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lily Allen is not a rapper.\n",
+      "Lil Wayne is a rapper.\n",
+      "Lil Durk is a rapper.\n",
+      "Lil Ugly Mane is a rapper.\n",
+      "Lil B is a rapper.\n",
+      "Lil Dicky is a rapper.\n",
+      "Lil' Kim is a rapper.\n",
+      "Lilly Wood & The Prick is not a rapper.\n",
+      "Lil Jon is a rapper.\n",
+      "Lil Jon & The East Side Boyz is a rapper.\n",
+      "Lila Downs is not a rapper.\n",
+      "Lil Boosie is a rapper.\n",
+      "Lilac is not a rapper.\n",
+      "The Tiger Lillies is not a rapper.\n",
+      "Lil Wyte is a rapper.\n",
+      "Lil' Flip is a rapper.\n",
+      "Spangle call Lilli line is not a rapper.\n",
+      "Mashrou' Leila is not a rapper.\n",
+      "Lily & Madeleine is not a rapper.\n",
+      "Lilys is not a rapper.\n",
+      "The Lillingtons is not a rapper.\n",
+      "Lillasyster is not a rapper.\n"
+     ]
+    }
+   ],
+   "source": [
+    "rap_tags = [\"rap\", \"hip-hop\", \"hip hop\", \"gangsta rap\", \"dirty south\", \"drill\", \"trap\", \"memphis rap\", \"gangsta rap\", \"crunk\"]\n",
+    "\n",
+    "rapper_count = 0\n",
+    "\n",
+    "for mbid in mbids:\n",
+    "    endpoint = base_url + mbid\n",
+    "    singer = requests.get(endpoint).json()\n",
+    "    rapper = False  \n",
+    "    for tag in singer['artist']['tags']['tag']:\n",
+    "        if tag['name'] in rap_tags:\n",
+    "            rapper = True\n",
+    "            rapper_count = rapper_count + 1\n",
+    "            break\n",
+    "    if rapper == True:\n",
+    "        print (singer['artist']['name'],\"is a rapper.\")\n",
+    "    else:\n",
+    "        print (singer['artist']['name'],\"is not a rapper.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0 percent of Lil's are rappers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rapper_count/len(mbids)*100,\"percent of Lil's are rappers.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 14) Seriously you are all-powerful now."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
